--- a/metadata.yaml
+++ b/metadata.yaml
@@ -48,5 +48,6 @@ subjects:
 - !lcc 'G'
 - !lcsh 'India -- Description and travel'
 - !lcsh 'Gama, Vasco da, 1469-1524'
+- GITenberg
 title: A Journal of the First Voyage of  Vasco da Gama 1497-1499
 url: http://www.gutenberg.org/ebooks/46440
